fixed will-changed/position: fixed bug on nav, fixed header overlap intro section bug

--- a/_sass/layout/_page-header.scss
+++ b/_sass/layout/_page-header.scss
@@ -14,7 +14,6 @@
   left: 0;
   background: $color-white;
   box-shadow: 0 3px 10px rgba(0, 0, 0, .35);
-  will-change: transform;
 
   @media (min-width: $bp-nav) {
     width: 100%;
